docker/php-fpm/kubectl/proxy.yaml
apiVersion: v1
kind: Service
metadata:
  name: proxy-service-externalname
  # namespace: proxy-test
spec:
  type: ExternalName
  externalName: "d1j4mvonfthijh.cloudfront.net"

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/upstream-vhost: "d1j4mvonfthijh.cloudfront.net"
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/server-snippet: |
      location / {
        proxy_pass http://dynamic;
        health_check;
      }
  name: proxy-service-externalname-ingress
spec:
  rules:
    - host: hello-world.info
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: proxy-service-externalname
                port:
                  number: 80


    # nginx.ingress.kubernetes.io/service-upstream: |
    #   upstream dynamic {
    #     zone upstream_dynamic 64k;

    #     server d1j4mvonfthijh.cloudfront.net/ei5Q3PdA/47n4l0Ca/ENYHtb4t3xjL/Cz5mgD     weight=5;
    #     server d1j4mvonfthijh.cloudfront.net/ei5Q3PdA/47n4l0Ca/ENYHtb4t3xjL/Cz5mgD fail_timeout=5s slow_start=15;
    #   }
